Improve error handling and messages for non-R errors